crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__sync_project__adds_if_listed.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SyncProject(bar)"]
    1 -> 0 [ label="required"]
}
