crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__sync_project__graphs_multiple.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SyncProject(foo)"]
    2 [ label="SyncProject(bar)"]
    3 [ label="SyncProject(qux)"]
    2 -> 0 [ label="required"]
    1 -> 0 [ label="required"]
    1 -> 2 [ label="required"]
    3 -> 0 [ label="required"]
}
